# PE-Hackathon-Template-2026

./: .env.example  .gitignore  Caddyfile  Dockerfile  POST_INCIDENT_REPORT.md  README.md  RUNBOOK.md  docker-compose.yml  events.csv  pyproject.toml  run.py  seed.py  urls.csv  users.csv  validate_seed.py
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  database.py  logger.py  metrics.py
app/models/: __init__.py
app/routes/: __init__.py
app/static/: app.css  app.js
app/templates/: index.html
docs/: API.md  ARCHITECTURE.md  CAPACITY.md  CONFIG.md  DECISIONS.md  DEPLOY.md  INDEX.md  README.md  RUNBOOK.md  SIMULATION.md  TROUBLESHOOTING.md
evidence/: SUBMISSION.md
monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml  url-shortener.json
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: __init__.py  capture_evidence.py  discord_relay.py  error_simulator.py  fake_data.py  kill_service.py  load_generator.py  simulate.py  test_advanced.py  test_challenges_3_6.py  watch_alerts.py
tests/: test_advanced.py  test_smoke.py
